# RaspberryPiOS-MCP

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: copilot-agent-implementation.md
.github/workflows/: ci.yml
deployment/: config.example.yml  install.sh  uninstall.sh
deployment/systemd/: mcp-raspi-server.service  raspi-ops-agent.service
docs/: 00-executive-summary.md  01-raspberry-pi-mcp-server-requirements-specification.md  02-raspberry-pi-mcp-server-high-level-architecture-design.md  03-raspberry-pi-platform-and-resource-constraints-design-note.md  04-security-oauth-integration-and-access-control-design.md  05-mcp-tools-interface-and-json-schema-specification.md  06-system-information-and-metrics-module-design.md  07-service-and-process-management-module-design.md  08-device-control-and-reboot-shutdown-safeguards-design.md  09-logging-observability-and-diagnostics-design.md  10-self-update-mechanism-and-rollback-strategy-design.md  11-testing-validation-and-sandbox-strategy.md  12-deployment-systemd-integration-and-operations-runbook.md  13-python-development-standards-and-tools.md  14-configuration-reference-and-examples.md  acceptance-checklist.md  cloudflare-tunnel-setup.md  copilot-custom-prompts-issues-5-12.md  document-navigator.md  getting-started.md  github-copilot-agent-issue-plan.md  github-issues-quick-reference.md  operations-runbook.md  phase-1-scope-matrix.md  quick-start-guide.md  test-matrix.md  troubleshooting.md
tests/: __init__.py  conftest.py  test_agent.py  test_audit_logger.py  test_config.py  test_context.py  test_errors.py  test_handlers_camera.py  test_handlers_gpio.py  test_handlers_i2c.py  test_handlers_logs.py  test_handlers_process.py  test_handlers_service.py  test_handlers_system.py  test_integration_ipc.py  test_ipc_client.py  test_ipc_protocol.py  test_jwks_fetcher.py  test_jwt_validator.py  test_logging.py  test_metrics_sampler.py  test_metrics_storage.py  test_protocol.py  test_rbac.py  test_routing.py  test_server.py  test_tools_camera.py  test_tools_gpio.py  test_tools_i2c.py  test_tools_logs.py  test_tools_manage.py  test_tools_metrics.py  test_tools_process.py  test_tools_service.py  test_tools_system.py  test_updates_backends.py  test_updates_health_check.py  test_updates_operations.py  test_updates_rollback.py  test_updates_state_machine.py  (+2 more)
(+54 files in other folders)
